examples/test/testpolicy19088.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19088
  namespace: namespace472
spec:
  podSelector:
    matchLabels:
      key12: value38
      key11: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value29
          key29: value16
          key4: value7
      podSelector:
        matchLabels:
          key16: value28
          key13: value5
          key41: value43
